--- a/test/src/app/globals.css
+++ b/test/src/app/globals.css
@@ -15,9 +15,8 @@
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  height: 100vh;
+  background-color: #F7E7D1;
 }
 
 @layer utilities {
